syntax = "proto3";

package kafkaMessages;

option go_package="github.com/rezaAmiri123/microservice/service_message/proto/kafka";

message Email {
  string Subject = 1;
  repeated  string To = 2;
  string From = 3;
  string Body = 4;
}

message CreateEmailRequest{
  Email email = 1;
}
